<resources>
    <string name="app_name">GeoTask</string>

    <string name="all">All</string>
    <string name="request">Request</string>
    <string name="provider">Provider</string>
    <string name="filter">Filter</string>
    <string name="profile">Profile</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="CANNOT_DELETE_BID_OFFLINE">Can\'t delete a bid in offline mode.</string>
    <string name="CANNOT_EDIT_BID_OFFLINE">Can\'t edit a bid in offline mode.</string>
    <string name="CANNOT_EDIT_PROFILE_OFFLINE">Can\'t edit your profile in offline mode.</string>
    <string name="CANNOT_LOGIN_OFFLINE">Can\'t login in offline mode.</string>
    <string name="CANNOT_DECLINE_ACCEPTED_OFFLINE">Can\'t decline an accepted bid in offline mode.</string>
    <string name="CANNOT_COMPLETE_TASK_OFFLINE">Can\'t set a task to completed in offline mode.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="EMAIL_ALREADY_IN_USE_WHEN_REGISTERING_AND_EDITING">This email has been used.</string>
    <string name="NAME_IS_EMPTY_WHEN_REGISTER_OR_EDITING_USER">Empty name.</string>
    <string name="NAME_EXCEEDS_8_CHARACTER_WHEN_REGISTER_AND_EDIT_USER">Username cannot exceed 8 characters.</string>
    <string name="EMAIL_IS_EMPTY_WHEN_REGISTER_OR_EDITING_USER">Empty email.</string>
    <string name="INVALID_EMAIL">Email format is invalid.</string>
    <string name="INVALID_PHONE">Phone number should only contain numbers.</string>
    <string name="PHONE_TOO_SHORT">Phone number should be at least 7 characters.</string>
    <string name="PHONE_TOO_LONG">Phone number should be at most 10 characters</string>
    <string name="FAILED_LOGIN_EMAIL_NOT_REGISTERED">This email has not been registered.</string>
    <string name="CURRENT_USER">currentUser</string>
    <string name="MODE_ALL">all</string>
    <string name="MODE_REQUESTER">Requester</string>
    <string name="MODE_PROVIDER">Provider</string>
    <string name="INVALID_TASK_DATA_WHEN_CREATING_NEW_TASK">Please enter valid task data.</string>
    <string name="CANT_DELETE_TASK">Can\'t delete a task which is accepted or completed.</string>
    <string name="TASK_TITLE_TOO_LONG">Task title should not exceed 30 characters.</string>
    <string name="TASK_TITLE_EMPTY">Task title is empty.</string>
    <string name="TASK_DESCRIPTION_TOO_LONG">Task description should not exceed 300 characters.</string>
    <string name="TASK_DESCRIPTION_EMPTY">Task description is empty.</string>
    <string name="TASK_BEING_VIEWED">task</string>
    <string name="UPDATED_TASK_AFTER_EDIT">updatedTask</string>
    <string name="TASK_STATUS_BIDDED">Bidded</string>
    <string name="CURRENT_TASK_BEING_VIEWED">Task</string>
    <string name="VIEW_USER">user_being_viewed</string>
    <string name="SYNC_AUTHORITY">"com.geotask.myapplication.provider"</string>
    <string name="DECIMAL_INVALID">Enter a valid decimal</string>
    <string name="title_activity_view_profile2">ViewProfile2Activity</string>
    <string name="PHOTO_LIST_SIZE">size</string>
</resources>
